--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/NEW_SURPLUS
 excludes=
 file.reference.mysql-connector-j-9.0.0.jar=C:\\Users\\Riddhi\\Desktop\\mysql-connector-j-9.0.0.jar
+file.reference.mysql-connector-j-9.0.0.jar-1=C:\\Users\\Riddhi\\OneDrive\\Desktop\\mysql-connector-j-9.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-9.0.0.jar}
+    ${file.reference.mysql-connector-j-9.0.0.jar}:\
+    ${file.reference.mysql-connector-j-9.0.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
